Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-12882

[C++][Gandiva] Fix behavior of convevrt_replace function for empty replacement char

    XMLWordPrintableJSON

Details

    Description

      The convert_replace function on Gandiva, when defining an empty replacement char, should be able to replace the invalid chars with an empty string. 

      Attachments

        Issue Links

          Activity

            People

              jpedroantunes João Pedro Antunes Ferreira
              jpedroantunes João Pedro Antunes Ferreira
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 20m
                  20m