ARROW-12882: [C++][Gandiva] Fix behavior of the convert replace function on gandiva

The convert_replace function on Gandiva, when defining an empty replacement char, should be able to replace the invalid chars with an empty string.

Closes #10406 from jpedroantunes/bugfix/convert-replace-empty-char and squashes the following commits:

0e1ec000f <João Pedro> Fix behavior of the convert replace function on gandiva

Authored-by: João Pedro <joaop@simbioseventures.com>
Signed-off-by: Praveen <praveen@dremio.com>